# ytx

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  overview.json  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
scripts/: cli_debug.py  jinja2_debug.py  llm_debug.py
scripts/output/: checklist.html
scripts/templates/: checklist.html
src/ytx/: __main__.py  cli.py
src/ytx/core/llm/: common.py  overview.py  summary.py
src/ytx/core/model/: overview_model.py
src/ytx/core/service/: download_service.py  init_service.py  overview_service.py  preview_service.py  summary_service.py
src/ytx/core/utils/: json3_utils.py  srt_utils.py
src/ytx/templates/: preview.html.j2
tests/: __init__.py
tests/model/: test_overview_model.py
tests/service/: test_download_service.py  test_init.py  test_llm_overview.py
