[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ytx = "ytx.cli:app"

[project]
name = "ytx"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "nonocast", email = "nonocast@gmail.com"}
]
maintainers = [
  {name = "nonocast", email = "nonocast@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "rich",
  "requests",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/nonocast/ytx/issues"
changelog = "https://github.com/nonocast/ytx/blob/master/changelog.md"
homepage = "https://github.com/nonocast/ytx"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

